Move gradle task, add Jenkinsfile, update README