@@ -11,15 +11,15 @@ ext {
 }
 
 sourceSets {
-    smokeTest {
+    pluginSmokeTest {
         java {
-            srcDirs += [ 'src/smokeTest/java' ]
+            srcDirs += [ 'src/pluginSmokeTest/java' ]
         }
         kotlin {
-            srcDirs += [ 'src/smokeTest/kotlin' ]
+            srcDirs += [ 'src/pluginSmokeTest/kotlin' ]
         }
         resources {
-            srcDirs = [ 'src/smokeTest/resources' ]
+            srcDirs = [ 'src/pluginSmokeTest/resources' ]
         }
         compileClasspath += main.output + test.output
         runtimeClasspath += main.output + test.output
@@ -29,14 +29,14 @@ sourceSets {
 kotlin {
     target {
         java
-        compilations.smokeTest {
+        compilations.pluginSmokeTest {
             associateWith compilations.main
             associateWith compilations.test
 
             configurations {
-                smokeTestApi.extendsFrom testApi
-                smokeTestImplementation.extendsFrom testImplementation
-                smokeTestRuntimeOnly.extendsFrom testRuntimeOnly
+                pluginSmokeTestApi.extendsFrom testApi
+                pluginSmokeTestImplementation.extendsFrom testImplementation
+                pluginSmokeTestRuntimeOnly.extendsFrom testRuntimeOnly
             }
         }
     }
@@ -70,7 +70,7 @@ dependencies {
     testImplementation "org.junit.jupiter:junit-jupiter:${junit5Version}"
     testImplementation "com.github.stefanbirkner:system-lambda:1.2.1"
 
-    smokeTestImplementation project(':testing:e2e-test-utilities')
+    pluginSmokeTestImplementation project(':testing:e2e-test-utilities')
 }
 
 cliPlugin {
@@ -93,44 +93,4 @@ publishing {
             artifact cliPluginTask
         }
     }
-}
-
-tasks.register('pluginSmokeTest', Test) {
-    description = "Runs smoke tests for Corda CLI plugins."
-    group = "verification"
-
-    testClassesDirs = project.sourceSets["smokeTest"].output.classesDirs
-    classpath = project.sourceSets["smokeTest"].runtimeClasspath
-
-    def combinedWorker = project.getProperties().getOrDefault("isCombinedWorker", true).toBoolean()
-    println "Running tests against ${ combinedWorker ? "combined worker" : "Kubernetes cluster" }"
-
-    // Note these port values have to match what is setup as part of port forwarding at cluster bootstrap time.
-    // E.g. during Jenkins pipeline setup.
-    def combinedWorkerUrl = "http://localhost:7004/"
-    def cryptoWorkerUrl = project.getProperties().getOrDefault("cryptoWorkerUrl", combinedWorker ? combinedWorkerUrl : "http://localhost:7001/")
-    systemProperty "cryptoWorkerUrl", cryptoWorkerUrl
-    println "Crypto worker url: $cryptoWorkerUrl"
-    def restWorkerUrl = project.getProperties().getOrDefault("restWorkerUrl", combinedWorker ? combinedWorkerUrl : "http://localhost:7002/")
-    systemProperty "restWorkerUrl", restWorkerUrl
-    println "REST worker url: $restWorkerUrl"
-    def flowWorkerUrl = project.getProperties().getOrDefault("flowWorkerUrl", combinedWorker ? combinedWorkerUrl : "http://localhost:7003/")
-    systemProperty "flowWorkerUrl",flowWorkerUrl
-    println "Flow worker url: $flowWorkerUrl"
-    def flowMapperWorkerUrl = project.getProperties().getOrDefault("flowMapperWorkerUrl", combinedWorker ? combinedWorkerUrl : "http://localhost:7004/")
-    systemProperty "flowMapperWorkerUrl", flowMapperWorkerUrl
-    println "Flow Mapper worker url: $flowMapperWorkerUrl"
-    def verificationWorkerUrl  = project.getProperties().getOrDefault("verificationWorkerUrl", combinedWorker ? combinedWorkerUrl : "http://localhost:7005/")
-    systemProperty "verificationWorkerUrl", verificationWorkerUrl
-    println "Verification worker url: $verificationWorkerUrl"
-    def dbWorkerUrl = project.getProperties().getOrDefault("dbWorkerUrl", combinedWorker ? combinedWorkerUrl : "http://localhost:7006/")
-    systemProperty "dbWorkerUrl", dbWorkerUrl
-    println "DB worker url: $dbWorkerUrl"
-    def persistenceWorkerUrl = project.getProperties().getOrDefault("persistenceWorkerUrl", combinedWorker ? combinedWorkerUrl : "http://localhost:7007/")
-    systemProperty "persistenceWorkerUrl", persistenceWorkerUrl
-    println "Persistence worker url: $persistenceWorkerUrl"
-    def uniquenessWorkerUrl = project.getProperties().getOrDefault("uniquenessWorkerUrl", combinedWorker ? combinedWorkerUrl : "http://localhost:7008/")
-    systemProperty "uniquenessWorkerUrl", uniquenessWorkerUrl
-
-    jvmArgs '--add-opens', 'java.base/java.lang.reflect=ALL-UNNAMED'
 }
